/***********************************************************************
X3 ChangeLog

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/plugins/__init__.py: refactor plugin instantiation logic.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_new_user.

	* src/modpython.py: refactor new_user handler to use new plugin
	system.

	* src/plugins/__init__.py: add empty new_user handler function to
	Plugin class.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_server_link to be more
	Pythonic.

	* src/modpython.py: rename old plugins class to plugins_ and use a
	more general plugin system.

	* src/plugins/__init__.py: extend with plugin base-class and
	recursive plugin load logic.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_service_register function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_adduser function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_svsjoin function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_svsquit function.

	* src/proto.h: observe proper const-ness in irc_svsquit function.
	
	* src/proto-p10.c: observe proper const-ness in irc_svsquit function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_svsnick function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor doc-strings for extension methods to separate
	variables. Minor code changes that modify function return values/types to
	be more uniform.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_fakehost function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_user_mode function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_channel_mode function.

2009-10-11  Henrik Stuart <evilnet@hstuart.dk>
