@@ -3,6 +3,16 @@ X3 ChangeLog
 
 2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: refactor python_handle_nick_change.
+
+	* src/plugins/__init__.py: add empty nick_change handler function to
+	Plugin class.
+
+	* src/modpython.py: refactor nick_change to use new plugin
+	system.
+
+2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/plugins/__init__.py: refactor plugin instantiation logic.
 
 2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
